fix: removing test card

--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="background-shapes"></div>
     <header class="logo">
       <img src="./assets/logo.svg" alt="Logo nlw copa" />
     </header>
-    <div class="card-purple"></div>
-    <main id="card">
+    <main id="card" data-card="explorer">
       <div class="card-header">
         <div class="card-logo"><img src="./assets/logo-dev.svg" alt="" /></div>
         <div class="card-techs">
@@ -47,5 +45,6 @@
         </div>
       </div>
     </main>
+    <script src="./script.js"></script>
   </body>
 </html>
