--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="logo">
       <img src="./assets/logo.svg" alt="Logo nlw copa" />
     </header>
-    <main id="card" data-card="explorer" onclick="changeCard()">
+    <main id="card" data-card="ignite" onclick="changeCard()">
       <div class="card-header">
         <div class="card-logo"><img src="./assets/logo-dev.svg" alt="" /></div>
         <div class="card-techs" data-card-explorer>
